Entity Panel - Skill Data

--- a/src/components/PageContent/PageSkillPanel.astro
+++ b/src/components/PageContent/PageSkillPanel.astro
@@ -51,7 +51,7 @@ function GetStatHighlightTargeting() {
 		<a>{GetHeaderRight(skillObject)}</a>
 	</div>
 </div>
-<div class="skill-panel">
+<div style="margin-top:2rem;" class="skill-panel">
 	{
 		skillObject.OccurenceData.map((occurence) => {
 			return (
@@ -114,8 +114,8 @@ function GetStatHighlightTargeting() {
 		border-radius: 25px;
 		width: 100%;
 		height: fit-content;
-		padding: 25px;
-		gap: 25px;
+		padding: 20px;
+		gap: 20px;
 		display: flex;
 		justify-content: flex-start;
 		flex-direction: column;
