JSON Changes For API

--- a/src/pages/wild-chess-simulator/battle-entities/[battleEntityName].astro
+++ b/src/pages/wild-chess-simulator/battle-entities/[battleEntityName].astro
@@ -7,6 +7,7 @@ import type { EntityData } from "../../../../public/data/EntityDataStructure";
 import PageSkillPanel from "../../../components/PageContent/PageSkillPanel.astro";
 import type { SkillData } from "../../../../public/data/SkillDataStructure";
 import PageEntityStat from "../../../components/PageContent/PageEntityStat.astro";
+import PageSubHeader from "../../../components/PageContent/PageSubHeader.astro";
 //
 export async function getStaticPaths() {
 	return EntityDataJsonFile.entityDataJsonArray.map((entry) => ({
@@ -36,15 +37,10 @@ const { battleEntityObject, skillObject } = Astro.props;
 		className={battleEntityObject.ClassID}
 	/>
 	<PageEntityStat statObject={battleEntityObject.Statistics} />
-	<h2 style="text-align: center;">
-		<a
-			style="cursor: pointer; text-decoration: none;"
-			href={"../skills/" +
-				skillObject.Identifier.toLowerCase().split(" ").join("-")}
-		>
-			{skillObject.Identifier}
-		</a>
-	</h2>
-	<hr style="margin-inline:50px;" />
+	<PageSubHeader
+		headerLink={"../skills/" +
+			skillObject.Identifier.toLowerCase().split(" ").join("-")}
+		headerTitle={skillObject.Identifier}
+	/>
 	<PageSkillPanel skillObject={skillObject} />
 </MainLayout>
