Freeform Table Work - For Some Reason

--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -173,6 +173,8 @@ const sidebar = SIDEBAR["en"];
 
 	details > summary {
 		list-style: none;
+		display: flex;
+		gap: 5px;
 	}
 
 	details[open] > summary svg {
