Only Dark Theme

--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -248,7 +248,7 @@ const sidebar = SIDEBAR["en"];
 </style>
 
 <style is:global>
-	:root.theme-dark .nav-link a[aria-current="page"] {
+	:root .nav-link a[aria-current="page"] {
 		color: hsla(var(--color-base-white), 100%, 1);
 	}
 </style>
