--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,7 +15,7 @@ const baseDomain = "https://ahmetahaydemir.dev";
 const canonicalURL = new URL(currentPage, baseDomain);
 ---
 
-<html dir={data.dir} lang={data.lang} class="initial theme-dark">
+<html dir={data.dir} lang={data.lang} class="initial">
 	<head>
 		<HeadCommon />
 		<HeadSEO {...data} canonicalUrl={canonicalURL} />
